--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,70 @@
     <string name="logout">로그아웃</string>
     <string name="id">ID</string>
     <string name="password">Password</string>
+    <string name="password_confirm">Password 확인</string>
     <string name="app_exit_message">\'뒤로\' 버튼을 한번 더 입력하면,\n서비스가 종료 됩니다.</string>
     <string name="company_address_fullwidth">서울특별시 영등포구 경인로 775 문래동, 에이스 하이테크시티 2동 1804호</string>
     <string name="company_address_normalwidth">서울특별시 영등포구 경인로 775 문래동,\n 에이스 하이테크시티 2동 1804호</string>
     <string name="company_contact">CONTACT:070-4680-0293</string>
     <string name="company_email">pms@urimts.co.kr</string>
     <string name="company_url">UrimTS 홈으로 이동</string>
-
+    <string name="user_register_success">사용자 %s 성공입니다.</string>
+    <string name="user_register_fail">사용자 %s 실패입니다.</string>
+    <string name="register">등록</string>
+    <string name="modify">수정</string>
+    <string name="manager1">관리자L1</string>
+    <string name="manager2">관리자L2</string>
+    <string name="developer">개발자</string>
+    <string name="manager1_eng">manager1</string>
+    <string name="manager2_eng">manager2</string>
+    <string name="developer_eng">developer</string>
+    <string name="manager_management">관리자 관리</string>
+    <string name="manager_create">관리자 생성</string>
+    <string name="manager_modify">관리자 수정</string>
+    <string name="manager_notify">관리자 알림</string>
+    <string name="manager_job_search">관리자 작업조회</string>
+    <string name="id_description">영문/숫자 혼용 5글자 이상 입력해주세요.</string>
+    <string name="duplicate_success">사용 가능한 %s입니다.</string>
+    <string name="duplicate_fail">중복된 %s입니다.</string>
+    <string name="duplicate_check">중복확인</string>
+    <string name="duplicate_confirm">%s 중복체크 확인하세요.</string>
+    <string name="name_description">2 ~ 10 글자 안으로 입력해주세요.</string>
+    <string name="required_msg">필수 항목 입력 바랍니다.</string>
+    <string name="name">이름</string>
+    <string name="address">주소</string>
+    <string name="level">Level</string>
+    <string name="telephone">전화번호</string>
+    <string name="description">상세설명</string>
+    <string name="store">저장</string>
+    <string name="cancel">취소</string>
+    <string name="confirm">확인</string>
+    <string name="start_day">시작 날짜</string>
+    <string name="end_day">종료 날짜</string>
+    <string name="search">조회</string>
+    <string name="job_content_inquiry">작업 내용 조회</string>
+    <string name="manager">관리자</string>
+    <string name="job_time">작업시간</string>
+    <string name="job_content">작업내용</string>
+    <string name="job_description">상세설명</string>
+    <string name="no_content">내용 없음</string>
+    <string name="reset_password_success">비밀번호가 재설정 되었습니다.</string>
+    <string name="reset_password_fail">비밀번호가 재설정이 실패 되었습니다.</string>
+    <string name="reset_password">관리자 PW 변경</string>
+    <string name="send_sms">SMS 전송</string>
+    <string name="receive_sms">수신</string>
+    <string name="not_match_password">비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>
+    <string name="not_match_admin_password">Admin 비밀번호가 맞지 않습니다.</string>
+    <string name="delete_user_message">사용자 삭제 %s입니다.</string>
+    <string name="warning_user_delete_message">관리자를 삭제하면 해당 관리자에 대한 정보가 영구적으로 사라집니다.</string>
+    <string name="want_to_input_admin_password">Admin의 비밀번호를 입력해주세요.</string>
+    <string name="site_management">사이트 관리</string>
+    <string name="site_create">사이트 생성</string>
+    <string name="site_modify">사이트 수정</string>
+    <string name="site_id">사이트 ID</string>
+    <string name="site_name">사이트 이름</string>
+    <string name="register_site_success">사이트 %s 성공입니다.</string>
+    <string name="register_site_fail">사이트 %s 실패입니다.</string>
+    <string name="duplicate_site">중복된 사이트입니다.</string>
+    <string name="available_site">사용 가능한 사이트입니다.</string>
+    <string name="mpu_add">MPU 추가</string>
 </resources>
