site,mpu,password change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="manager_create">관리자 생성</string>
     <string name="manager_modify">관리자 수정</string>
     <string name="manager_notify">관리자 알림</string>
+    <string name="manager_add">관리자 추가</string>
     <string name="manager_job_search">관리자 작업조회</string>
     <string name="id_description">영문/숫자 혼용 5글자 이상 입력해주세요.</string>
     <string name="duplicate_success">사용 가능한 %s입니다.</string>
@@ -33,7 +34,9 @@
     <string name="duplicate_confirm">%s 중복체크 확인하세요.</string>
     <string name="name_description">2 ~ 10 글자 안으로 입력해주세요.</string>
     <string name="required_msg">필수 항목 입력 바랍니다.</string>
+    <string name="no_id_msg">ID를 입력하세요.</string>
     <string name="name">이름</string>
+    <string name="mpu">MPU</string>
     <string name="address">주소</string>
     <string name="level">Level</string>
     <string name="telephone">전화번호</string>
@@ -45,6 +48,7 @@
     <string name="end_day">종료 날짜</string>
     <string name="search">조회</string>
     <string name="job_content_inquiry">작업 내용 조회</string>
+    <string name="job_user_inquiry">작업자 선택</string>
     <string name="manager">관리자</string>
     <string name="job_time">작업시간</string>
     <string name="job_content">작업내용</string>
@@ -65,9 +69,44 @@
     <string name="site_modify">사이트 수정</string>
     <string name="site_id">사이트 ID</string>
     <string name="site_name">사이트 이름</string>
-    <string name="register_site_success">사이트 %s 성공입니다.</string>
-    <string name="register_site_fail">사이트 %s 실패입니다.</string>
+    <string name="site_success">사이트 %s 성공입니다.</string>
+    <string name="site_fail">사이트 %s 실패입니다.</string>
     <string name="duplicate_site">중복된 사이트입니다.</string>
     <string name="available_site">사용 가능한 사이트입니다.</string>
     <string name="mpu_add">MPU 추가</string>
+    <string name="mpu_create">MPU 생성</string>
+    <string name="mpu_modify">MPU 수정</string>
+    <string name="mpu_id">MPU ID</string>
+    <string name="site_mpu_success">사이트 %s 성공입니다.</string>
+    <string name="site_mpu_fail">사이트 %s 실패입니다.</string>
+    <string name="site_manager_success">관리자 %s 성공입니다.</string>
+    <string name="site_manager_fail">관리자 %s 실패입니다.</string>
+    <string name="no_selected_item"> %s가 선택되지 않았습니다.</string>
+    <string name="no_authority_message"> 권한 문제로 어플 종료합니다.</string>
+    <string name="mpu_management"> MPU 관리</string>
+    <string name="duplicate_mpu">MPU ID가 중복됩니다.</string>
+    <string name="available_mpu">MPU ID를 사용 할 수 있습니다.</string>
+    <string name="no_mpu_id">MPU ID를 입력하세요.</string>
+    <string name="safe_manager_name">안전관리자 이름</string>
+    <string name="safe_manager_contact">안전관리자 전화번호</string>
+    <string name="mpu_capacity">MPU 발전용량(kW)</string>
+    <string name="mpu_composition">MPU 구성</string>
+    <string name="mpu_success">MPU %s 성공입니다.</string>
+    <string name="mpu_fail">MPU %s 실패입니다.</string>
+    <string name="not_max_16">16을 초과할 수 없습니다.</string>
+    <string name="warning_mpu_delete_message">해당 MPU정보가 삭제되며 기존 DB데이터도 모두 삭제 됩니다.</string>
+    <string name="delete_mpu">삭제할 MPU</string>
+    <string name="delete_mpu_message">MPU 삭제 %s입니다.</string>
+    <string name="inquiry_by_user">관리자별 조회</string>
+    <string name="inquiry_by_control">제어이력 조회</string>
+    <string name="select_manager_job_search">관리자별 조회 이동</string>
+    <string name="select_inquiry_by_control">제어 이력 조회 이동</string>
+    <string name="inquiry_by_mpu">MPU 조회</string>
+    <string name="change_admin_password">Admin PW 변경</string>
+    <string name="current_admin_password">현재 Admin PW</string>
+    <string name="new_admin_password">새 Admin PW</string>
+    <string name="confirm_new_admin_password">새 Admin PW(확인)</string>
+    <string name="not_matched_new_password">비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>
+    <string name="change_password_message">비밀번호가 재설정%s 되었습니다.</string>
+    <string name="change_password_restart_app">"비밀번호가 변경되어 앱을 재시작합니다.</string>
 </resources>
